feat: move configuration vars into separate config file

--- a/notebooks/airdrop_arb_distribution/airdrop.ipynb
+++ b/notebooks/airdrop_arb_distribution/airdrop.ipynb
@@ -11,44 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "outputs": [],
-   "source": [
-    "# Query:\n",
-    "POOLS_SNAPSHOTS_QUERY = \"\"\"\n",
-    "{{\n",
-    "  poolSnapshots(\n",
-    "    first: {first}\n",
-    "    skip: {skip}\n",
-    "    orderBy: timestamp\n",
-    "    orderDirection: desc\n",
-    "    where: {{timestamp_gte: {start_ts}, timestamp_lt: {end_ts}}}\n",
-    "  ) {{\n",
-    "    pool {{\n",
-    "      address\n",
-    "      id\n",
-    "      symbol\n",
-    "    }}\n",
-    "    timestamp\n",
-    "    protocolFee\n",
-    "    swapFees\n",
-    "    swapVolume\n",
-    "    liquidity\n",
-    "  }}\n",
-    "}}\n",
-    "\"\"\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-13T11:06:43.680580Z",
-     "start_time": "2023-09-13T11:06:43.657597Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "outputs": [
     {
      "name": "stdout",
@@ -59,6 +22,8 @@
     }
    ],
    "source": [
+    "from notebooks.airdrop_arb_distribution.config import POOLS_SNAPSHOTS_QUERY\n",
+    "from notebooks.airdrop_arb_distribution.config import BALANCER_GRAPH_URL\n",
     "import json\n",
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
@@ -69,8 +34,6 @@
     "from gql import Client\n",
     "from gql import gql\n",
     "from gql.transport.requests import RequestsHTTPTransport\n",
-    "\n",
-    "BALANCER_GRAPH_URL = \"https://api.thegraph.com/subgraphs/name/balancer-labs/balancer-arbitrum-v2\"\n",
     "\n",
     "# Start date and end date are the following: start date is always previous Thursday 00:00 UTC, end date is always this Thursday 00:00 UTC:\n",
     "today = datetime.today()\n",
@@ -119,8 +82,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-13T11:06:50.887781Z",
-     "start_time": "2023-09-13T11:06:43.672287Z"
+     "end_time": "2023-09-13T11:14:13.059784Z",
+     "start_time": "2023-09-13T11:14:05.792209Z"
     }
    }
   },
@@ -135,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "outputs": [
     {
      "name": "stdout",
@@ -146,12 +109,13 @@
     }
    ],
    "source": [
-    "current_year = 2023\n",
+    "from notebooks.airdrop_arb_distribution.config import CURRENT_YEAR\n",
+    "\n",
     "emissions_per_week = 0\n",
     "with open('../../data/emissionsPerYear.json') as f:\n",
     "    data = json.load(f)\n",
     "for item in data['data']:\n",
-    "    if item['year'] == str(current_year):\n",
+    "    if item['year'] == str(CURRENT_YEAR):\n",
     "        emissions_per_week = float(item['balPerWeek'])\n",
     "        break\n",
     "print(f'Current BAL emissions per week: {emissions_per_week}')"
@@ -159,8 +123,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-13T11:06:50.895271Z",
-     "start_time": "2023-09-13T11:06:50.882890Z"
+     "end_time": "2023-09-13T11:14:13.062800Z",
+     "start_time": "2023-09-13T11:14:13.057912Z"
     }
    }
   },
@@ -175,9 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "outputs": [],
    "source": [
+    "from notebooks.airdrop_arb_distribution.config import BALANCER_GAUGE_CONTROLLER_ABI\n",
+    "from notebooks.airdrop_arb_distribution.config import BALANCER_GAUGE_CONTROLLER_ADDR\n",
+    "from notebooks.airdrop_arb_distribution.config import ARB_CHAIN_ID\n",
     "import os\n",
     "\n",
     "import requests\n",
@@ -186,16 +153,6 @@
     "from pycoingecko import CoinGeckoAPI\n",
     "\n",
     "load_dotenv()\n",
-    "\n",
-    "ARB_CHAIN_ID = 42161\n",
-    "BALANCER_GAUGE_URL = \"https://api.thegraph.com/subgraphs/name/balancer-labs/balancer-gauges\"\n",
-    "BALANCER_GAUGE_CONTROLLER_ADDR = \"0xC128468b7Ce63eA702C1f104D55A2566b13D3ABD\"\n",
-    "BALANCER_GAUGE_CONTROLLER_ABI = [{\"stateMutability\": \"view\", \"type\": \"function\", \"name\": \"gauge_relative_weight\",\n",
-    "                                  \"inputs\": [{\"name\": \"addr\", \"type\": \"address\"}],\n",
-    "                                  \"outputs\": [{\"name\": \"\", \"type\": \"uint256\"}]},\n",
-    "                                 {\"stateMutability\": \"view\", \"type\": \"function\", \"name\": \"gauge_relative_weight\",\n",
-    "                                  \"inputs\": [{\"name\": \"addr\", \"type\": \"address\"}, {\"name\": \"time\", \"type\": \"uint256\"}],\n",
-    "                                  \"outputs\": [{\"name\": \"\", \"type\": \"uint256\"}]}]\n",
     "\n",
     "web3 = Web3(Web3.HTTPProvider(os.environ[\"ETHNODEURL\"]))\n",
     "\n",
@@ -232,8 +189,8 @@
     "        boost_data[boost['gaugeAddress']] = boost.get('fixedBoost', 1)\n",
     "        cap_override_data[boost['gaugeAddress']] = boost.get('capOverride', 10)\n",
     "pool_protocol_fees = {}\n",
+    "\n",
     "# Collect protocol fees from the pool snapshots:\n",
-    "# TODO: Doesn't work properly as there can be multiple snapshots per pool per week\n",
     "for gauge_addr, gauge_data in arb_gauges.items():\n",
     "    for pool_snapshot in pool_snapshots:\n",
     "        if Web3.to_checksum_address(pool_snapshot['pool']['address']) == Web3.to_checksum_address(gauge_data['pool']):\n",
@@ -245,14 +202,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-13T11:06:51.188735Z",
-     "start_time": "2023-09-13T11:06:50.889517Z"
+     "end_time": "2023-09-13T11:14:13.658208Z",
+     "start_time": "2023-09-13T11:14:13.064941Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "outputs": [],
    "source": [
     "# Apply boost data to arb gauges\n",
@@ -280,8 +237,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-13T11:06:56.545988Z",
-     "start_time": "2023-09-13T11:06:51.192476Z"
+     "end_time": "2023-09-13T11:14:19.257599Z",
+     "start_time": "2023-09-13T11:14:13.661563Z"
     }
    }
   },
@@ -296,40 +253,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Unspent arb: 0.0\n",
-      "Arb distributed: 70000.0\n"
+      "Arb distributed: 80000.0\n"
      ]
     },
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>recipientGaugeAddr</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n      <th>bonus</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x2eB5661002b68EBE887d29d415c3A3b52536912C</td>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>1.428668</td>\n      <td>14413.113197</td>\n      <td>20.590162</td>\n      <td>1.755340</td>\n      <td>1.75</td>\n      <td>1.005340</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xd6B875d62c2661eaB66472F36c672e4B512f1135</td>\n      <td>0xadE4A71BB62bEc25154CFc7e6ff49A513B491E81</td>\n      <td>rETH-WETH-BPT</td>\n      <td>1.114417</td>\n      <td>10392.273881</td>\n      <td>14.846106</td>\n      <td>1.752078</td>\n      <td>1.75</td>\n      <td>1.002078</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xcf9f895296F5e1D66a7D4dcf1d92e1B435E9f999</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.636144</td>\n      <td>8000.000000</td>\n      <td>11.428571</td>\n      <td>2.565307</td>\n      <td>1.50</td>\n      <td>2.065307</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xd956246EA5b06DEa930F0A7feC1FFf000436e3f2</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>1.101371</td>\n      <td>8000.000000</td>\n      <td>11.428571</td>\n      <td>1.000523</td>\n      <td>1.00</td>\n      <td>1.000523</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x82d2c7B67Eaa5028c89BE86CeA8e1DF5bd2119A1</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.821157</td>\n      <td>8000.000000</td>\n      <td>11.428571</td>\n      <td>1.005280</td>\n      <td>1.00</td>\n      <td>1.005280</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x260cbb867359a1084eC97de4157d06ca74e89415</td>\n      <td>0x9791d590788598535278552EEcD4b211bFc790CB</td>\n      <td>wstETH-WETH-BPT</td>\n      <td>0.597407</td>\n      <td>5355.885428</td>\n      <td>7.651265</td>\n      <td>1.765351</td>\n      <td>1.75</td>\n      <td>1.015351</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xfC745035F31BCbaEb2D1a89aA9171495c671F6cE</td>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.471499</td>\n      <td>4870.639303</td>\n      <td>6.958056</td>\n      <td>1.754860</td>\n      <td>1.75</td>\n      <td>1.004860</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x011417BBED6FC9cefF36C032D431b0eFcBA7f8B3</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.424183</td>\n      <td>4654.868607</td>\n      <td>6.649812</td>\n      <td>1.009451</td>\n      <td>1.00</td>\n      <td>1.009451</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xa14453084318277b11d38FbE05D857A4f647442B</td>\n      <td>0x423A1323c871aBC9d89EB06855bF5347048Fc4A5</td>\n      <td>4POOL-BPT</td>\n      <td>0.281785</td>\n      <td>12654.825063</td>\n      <td>3.792607</td>\n      <td>1.006157</td>\n      <td>1.00</td>\n      <td>1.006157</td>\n      <td>10%</td>\n      <td>10000</td>\n    </tr>\n    <tr>\n      <td>0xb438c6cc53315FfA3fcD1bc8b27d6c3155b0B56A</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.226369</td>\n      <td>2517.917157</td>\n      <td>3.597025</td>\n      <td>1.023530</td>\n      <td>1.00</td>\n      <td>1.023530</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x04fc019017eD3F921D5ec11fFf84B870744BA0d1</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.093369</td>\n      <td>999.587770</td>\n      <td>1.427983</td>\n      <td>1.000169</td>\n      <td>1.00</td>\n      <td>1.000169</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xeF767E740D83d410794519c2F93Db32e44359a5C</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.012657</td>\n      <td>140.889593</td>\n      <td>0.201271</td>\n      <td>690.881283</td>\n      <td>1.00</td>\n      <td>690.881283</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>recipientGaugeAddr</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n      <th>bonus</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x2eB5661002b68EBE887d29d415c3A3b52536912C</td>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>1.428668</td>\n      <td>16000.000000</td>\n      <td>20.000000</td>\n      <td>1.755340</td>\n      <td>1.75</td>\n      <td>1.005340</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xd6B875d62c2661eaB66472F36c672e4B512f1135</td>\n      <td>0xadE4A71BB62bEc25154CFc7e6ff49A513B491E81</td>\n      <td>rETH-WETH-BPT</td>\n      <td>1.114417</td>\n      <td>13206.748736</td>\n      <td>16.508436</td>\n      <td>1.752078</td>\n      <td>1.75</td>\n      <td>1.002078</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xcf9f895296F5e1D66a7D4dcf1d92e1B435E9f999</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.636144</td>\n      <td>8000.000000</td>\n      <td>10.000000</td>\n      <td>2.565307</td>\n      <td>1.50</td>\n      <td>2.065307</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xd956246EA5b06DEa930F0A7feC1FFf000436e3f2</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>1.101371</td>\n      <td>8000.000000</td>\n      <td>10.000000</td>\n      <td>1.000523</td>\n      <td>1.00</td>\n      <td>1.000523</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x82d2c7B67Eaa5028c89BE86CeA8e1DF5bd2119A1</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.821157</td>\n      <td>8000.000000</td>\n      <td>10.000000</td>\n      <td>1.005280</td>\n      <td>1.00</td>\n      <td>1.005280</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x260cbb867359a1084eC97de4157d06ca74e89415</td>\n      <td>0x9791d590788598535278552EEcD4b211bFc790CB</td>\n      <td>wstETH-WETH-BPT</td>\n      <td>0.597407</td>\n      <td>6613.777020</td>\n      <td>8.267221</td>\n      <td>1.765351</td>\n      <td>1.75</td>\n      <td>1.015351</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xfC745035F31BCbaEb2D1a89aA9171495c671F6cE</td>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.471499</td>\n      <td>6220.233198</td>\n      <td>7.775291</td>\n      <td>1.754860</td>\n      <td>1.75</td>\n      <td>1.004860</td>\n      <td>20%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x011417BBED6FC9cefF36C032D431b0eFcBA7f8B3</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.424183</td>\n      <td>5909.478657</td>\n      <td>7.386848</td>\n      <td>1.009451</td>\n      <td>1.00</td>\n      <td>1.009451</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xa14453084318277b11d38FbE05D857A4f647442B</td>\n      <td>0x423A1323c871aBC9d89EB06855bF5347048Fc4A5</td>\n      <td>4POOL-BPT</td>\n      <td>0.281785</td>\n      <td>13398.883093</td>\n      <td>4.248604</td>\n      <td>1.006157</td>\n      <td>1.00</td>\n      <td>1.006157</td>\n      <td>10%</td>\n      <td>10000</td>\n    </tr>\n    <tr>\n      <td>0xb438c6cc53315FfA3fcD1bc8b27d6c3155b0B56A</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.226369</td>\n      <td>3215.361135</td>\n      <td>4.019201</td>\n      <td>1.023530</td>\n      <td>1.00</td>\n      <td>1.023530</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0x04fc019017eD3F921D5ec11fFf84B870744BA0d1</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.093369</td>\n      <td>1255.544995</td>\n      <td>1.569431</td>\n      <td>1.000169</td>\n      <td>1.00</td>\n      <td>1.000169</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>0xeF767E740D83d410794519c2F93Db32e44359a5C</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.012657</td>\n      <td>179.973165</td>\n      <td>0.224966</td>\n      <td>690.881283</td>\n      <td>1.00</td>\n      <td>690.881283</td>\n      <td>10%</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
+    "from notebooks.airdrop_arb_distribution.config import ARBITRUM_TO_USD_POOL\n",
+    "from notebooks.airdrop_arb_distribution.config import ARB_ROOT_GAUGE\n",
+    "from notebooks.airdrop_arb_distribution.config import VOTE_CAP_IN_PERCENT\n",
+    "from notebooks.airdrop_arb_distribution.config import ARBITRUM_TO_DISTRIBUTE\n",
     "from notebooks import get_abi\n",
     "from IPython.core.display import HTML\n",
     "import pandas as pd\n",
     "\n",
-    "ARBITRUM_TO_DISTRIBUTE = 70_000  # 65k arb to distribute to the gauges from airdrop\n",
-    "ARBITRUM_TO_USD_POOL = 10_000  # Constant pool of arb to usd\n",
-    "TOTAL_WEEKLY_ARB = 80_000 # The total amount distributed per week by the program\n",
-    "VOTE_CAP_IN_PERCENT = 10  # 10% cap on any single gauge\n",
-    "ARB_GAUGE_WITH_BONUS = Web3.to_checksum_address(\"0xa14453084318277b11d38FbE05D857A4f647442B\")\n",
-    "ARB_ROOT_GAUGE = Web3.to_checksum_address(\"0xBb1a15dfd849bc5a6F33C002999c8953aFA626Ad\")\n",
+    "\n",
+    "# Vote caps in percents are calculated as a percentage of the total amount of arb to distribute\n",
     "VOTE_CAPS_IN_PERCENTS = {gauge_addr: cap_override_data.get(gauge_addr, VOTE_CAP_IN_PERCENT) for gauge_addr in\n",
     "                         arb_gauges.keys()}\n",
-    "# Custom gauge caps taken from boost data\n",
-    "VOTE_CAPS = {gauge_addr: VOTE_CAPS_IN_PERCENTS[gauge_addr] / 100 * TOTAL_WEEKLY_ARB for gauge_addr in\n",
+    "# Custom gauge caps taken from boost data, calculated as a percentage of the total amount of arb to distribute\n",
+    "VOTE_CAPS = {gauge_addr: VOTE_CAPS_IN_PERCENTS[gauge_addr] / 100 * ARBITRUM_TO_DISTRIBUTE for gauge_addr in\n",
     "             arb_gauges.keys()}\n",
     "\n",
     "# Calculate total weight\n",
@@ -408,8 +365,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-13T11:07:02.177258Z",
-     "start_time": "2023-09-13T11:06:56.554487Z"
+     "end_time": "2023-09-13T11:20:23.308438Z",
+     "start_time": "2023-09-13T11:20:17.561608Z"
     }
    }
   },
@@ -424,8 +381,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "outputs": [],
+   "execution_count": 47,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89999.99999999999\n"
+     ]
+    }
+   ],
    "source": [
     "# Export to csv\n",
     "arb_gauge_distributions_df.to_csv(f'./output/arb_airdrop_{start_date.date()}_{end_date.date()}.csv',\n",
@@ -437,7 +402,8 @@
     "\n",
     "# Find transaction with func name `setRecipientList` and dump gauge \n",
     "gauge_distributions = arb_gauge_distributions.values()\n",
-    "assert int(sum([gauge['distribution'] for gauge in gauge_distributions])) == ARBITRUM_TO_DISTRIBUTE + ARBITRUM_TO_USD_POOL\n",
+    "assert round(\n",
+    "    sum([gauge['distribution'] for gauge in gauge_distributions]), 2) == ARBITRUM_TO_DISTRIBUTE + ARBITRUM_TO_USD_POOL\n",
     "for tx in output_data['transactions']:\n",
     "    if tx['contractMethod']['name'] == 'setRecipientList':\n",
     "        # Inject list of gauges addresses:\n",
@@ -456,8 +422,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-13T11:07:02.185866Z",
-     "start_time": "2023-09-13T11:07:02.172895Z"
+     "end_time": "2023-09-13T11:17:13.605805Z",
+     "start_time": "2023-09-13T11:17:13.586041Z"
     }
    }
   }
