feat: add vote weith no boost column data for reference to dao_grant.ipynb

--- a/notebooks/arb_dao_grant_distribution/dao_grant.ipynb
+++ b/notebooks/arb_dao_grant_distribution/dao_grant.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -90,8 +90,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-21T12:56:48.859185Z",
-     "start_time": "2023-09-21T12:56:41.215784Z"
+     "end_time": "2023-09-25T16:39:15.914095Z",
+     "start_time": "2023-09-25T16:39:07.985468Z"
     }
    }
   },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -130,8 +130,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-21T12:56:54.931353Z",
-     "start_time": "2023-09-21T12:56:54.926388Z"
+     "end_time": "2023-09-25T16:39:15.915259Z",
+     "start_time": "2023-09-25T16:39:15.904507Z"
     }
    }
   },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from notebooks.arb_dao_grant_distribution.static_boosts import STATIC_BOOST\n",
@@ -210,14 +210,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-21T12:56:56.805374Z",
-     "start_time": "2023-09-21T12:56:56.077881Z"
+     "end_time": "2023-09-25T16:39:16.839340Z",
+     "start_time": "2023-09-25T16:39:15.919583Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Apply boost data to arb gauges\n",
@@ -229,6 +229,7 @@
     "for gauge_addr, gauge_data in arb_gauges.items():\n",
     "    weight = gauge_c_contract.functions.gauge_relative_weight(Web3.to_checksum_address(gauge_addr)).call(\n",
     "        block_identifier=target_block) / 1e18 * 100\n",
+    "    arb_gauges[gauge_addr]['weightNoBoost'] = weight\n",
     "    # Calculate dynamic boost. Formula is `[Fees earned/value of bal emitted per pool + 1]`\n",
     "    dollar_value_of_bal_emitted = weight * emissions_per_week * bal_token_price\n",
     "    if dollar_value_of_bal_emitted != 0:\n",
@@ -246,8 +247,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-21T12:57:08.290478Z",
-     "start_time": "2023-09-21T12:56:59.633174Z"
+     "end_time": "2023-09-25T16:39:25.164946Z",
+     "start_time": "2023-09-25T16:39:16.843088Z"
     }
    }
   },
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -276,7 +277,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>recipientGaugeAddr</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n      <th>bonus</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x2eB5661002b68EBE887d29d415c3A3b52536912C</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>1.389490</td>\n      <td>33076.988351</td>\n      <td>16.538494</td>\n      <td>1.759631</td>\n      <td>1.75</td>\n      <td>1.009631</td>\n      <td>20%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xd6B875d62c2661eaB66472F36c672e4B512f1135</td>\n      <td>rETH-WETH-BPT</td>\n      <td>1.108707</td>\n      <td>27968.045501</td>\n      <td>13.984023</td>\n      <td>1.755336</td>\n      <td>1.75</td>\n      <td>1.005336</td>\n      <td>20%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xa14453084318277b11d38FbE05D857A4f647442B</td>\n      <td>4POOL-BPT</td>\n      <td>0.283514</td>\n      <td>22295.961142</td>\n      <td>11.147981</td>\n      <td>1.009480</td>\n      <td>1.00</td>\n      <td>1.009480</td>\n      <td>10%</td>\n      <td>15000.0</td>\n    </tr>\n    <tr>\n      <td>0x82d2c7B67Eaa5028c89BE86CeA8e1DF5bd2119A1</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.824567</td>\n      <td>20000.000000</td>\n      <td>10.000000</td>\n      <td>1.006612</td>\n      <td>1.00</td>\n      <td>1.006612</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xd956246EA5b06DEa930F0A7feC1FFf000436e3f2</td>\n      <td>DOLA/USDC BPT</td>\n      <td>1.104976</td>\n      <td>20000.000000</td>\n      <td>10.000000</td>\n      <td>1.000972</td>\n      <td>1.00</td>\n      <td>1.000972</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xcf9f895296F5e1D66a7D4dcf1d92e1B435E9f999</td>\n      <td>RDNT-WETH</td>\n      <td>2.659117</td>\n      <td>20000.000000</td>\n      <td>10.000000</td>\n      <td>2.657610</td>\n      <td>1.50</td>\n      <td>2.157610</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0x138E37c3885169DB38e046D5c814C0e95566566c</td>\n      <td>wstETH-4POOL</td>\n      <td>0.000000</td>\n      <td>15000.000000</td>\n      <td>7.500000</td>\n      <td>1.000000</td>\n      <td>1.00</td>\n      <td>1.000000</td>\n      <td>10%</td>\n      <td>15000.0</td>\n    </tr>\n    <tr>\n      <td>0x260cbb867359a1084eC97de4157d06ca74e89415</td>\n      <td>wstETH-WETH-BPT</td>\n      <td>0.605383</td>\n      <td>13329.641410</td>\n      <td>6.664821</td>\n      <td>1.783884</td>\n      <td>1.75</td>\n      <td>1.033884</td>\n      <td>20%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xfC745035F31BCbaEb2D1a89aA9171495c671F6cE</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.488927</td>\n      <td>12942.471609</td>\n      <td>6.471236</td>\n      <td>1.764004</td>\n      <td>1.75</td>\n      <td>1.014004</td>\n      <td>20%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0x011417BBED6FC9cefF36C032D431b0eFcBA7f8B3</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.375134</td>\n      <td>8358.820473</td>\n      <td>4.179410</td>\n      <td>1.011695</td>\n      <td>1.00</td>\n      <td>1.011695</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xb438c6cc53315FfA3fcD1bc8b27d6c3155b0B56A</td>\n      <td>2BTC</td>\n      <td>0.192012</td>\n      <td>4305.358492</td>\n      <td>2.152679</td>\n      <td>1.031066</td>\n      <td>1.00</td>\n      <td>1.031066</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0x04fc019017eD3F921D5ec11fFf84B870744BA0d1</td>\n      <td>50DFX-50WETH</td>\n      <td>0.093643</td>\n      <td>2373.558624</td>\n      <td>1.186779</td>\n      <td>1.000280</td>\n      <td>1.00</td>\n      <td>1.000280</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xeF767E740D83d410794519c2F93Db32e44359a5C</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.014658</td>\n      <td>349.154399</td>\n      <td>0.174577</td>\n      <td>912.596494</td>\n      <td>1.00</td>\n      <td>912.596494</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>recipientGaugeAddr</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>voteWeightNoBoost</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n      <th>bonus</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x2eB5661002b68EBE887d29d415c3A3b52536912C</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>1.389490</td>\n      <td>0.789648</td>\n      <td>33076.988351</td>\n      <td>16.538494</td>\n      <td>1.759631</td>\n      <td>1.75</td>\n      <td>1.009631</td>\n      <td>20%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xd6B875d62c2661eaB66472F36c672e4B512f1135</td>\n      <td>rETH-WETH-BPT</td>\n      <td>1.108707</td>\n      <td>0.631621</td>\n      <td>27968.045501</td>\n      <td>13.984023</td>\n      <td>1.755336</td>\n      <td>1.75</td>\n      <td>1.005336</td>\n      <td>20%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xa14453084318277b11d38FbE05D857A4f647442B</td>\n      <td>4POOL-BPT</td>\n      <td>0.283514</td>\n      <td>0.280852</td>\n      <td>22295.961142</td>\n      <td>11.147981</td>\n      <td>1.009480</td>\n      <td>1.00</td>\n      <td>1.009480</td>\n      <td>10%</td>\n      <td>15000.0</td>\n    </tr>\n    <tr>\n      <td>0x82d2c7B67Eaa5028c89BE86CeA8e1DF5bd2119A1</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.824567</td>\n      <td>0.819151</td>\n      <td>20000.000000</td>\n      <td>10.000000</td>\n      <td>1.006612</td>\n      <td>1.00</td>\n      <td>1.006612</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xd956246EA5b06DEa930F0A7feC1FFf000436e3f2</td>\n      <td>DOLA/USDC BPT</td>\n      <td>1.104976</td>\n      <td>1.103903</td>\n      <td>20000.000000</td>\n      <td>10.000000</td>\n      <td>1.000972</td>\n      <td>1.00</td>\n      <td>1.000972</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xcf9f895296F5e1D66a7D4dcf1d92e1B435E9f999</td>\n      <td>RDNT-WETH</td>\n      <td>2.659117</td>\n      <td>1.000567</td>\n      <td>20000.000000</td>\n      <td>10.000000</td>\n      <td>2.657610</td>\n      <td>1.50</td>\n      <td>2.157610</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0x138E37c3885169DB38e046D5c814C0e95566566c</td>\n      <td>wstETH-4POOL</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>15000.000000</td>\n      <td>7.500000</td>\n      <td>1.000000</td>\n      <td>1.00</td>\n      <td>1.000000</td>\n      <td>10%</td>\n      <td>15000.0</td>\n    </tr>\n    <tr>\n      <td>0x260cbb867359a1084eC97de4157d06ca74e89415</td>\n      <td>wstETH-WETH-BPT</td>\n      <td>0.605383</td>\n      <td>0.339362</td>\n      <td>13329.641410</td>\n      <td>6.664821</td>\n      <td>1.783884</td>\n      <td>1.75</td>\n      <td>1.033884</td>\n      <td>20%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xfC745035F31BCbaEb2D1a89aA9171495c671F6cE</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.488927</td>\n      <td>0.277169</td>\n      <td>12942.471609</td>\n      <td>6.471236</td>\n      <td>1.764004</td>\n      <td>1.75</td>\n      <td>1.014004</td>\n      <td>20%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0x011417BBED6FC9cefF36C032D431b0eFcBA7f8B3</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.375134</td>\n      <td>0.370798</td>\n      <td>8358.820473</td>\n      <td>4.179410</td>\n      <td>1.011695</td>\n      <td>1.00</td>\n      <td>1.011695</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xb438c6cc53315FfA3fcD1bc8b27d6c3155b0B56A</td>\n      <td>2BTC</td>\n      <td>0.192012</td>\n      <td>0.186227</td>\n      <td>4305.358492</td>\n      <td>2.152679</td>\n      <td>1.031066</td>\n      <td>1.00</td>\n      <td>1.031066</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0x04fc019017eD3F921D5ec11fFf84B870744BA0d1</td>\n      <td>50DFX-50WETH</td>\n      <td>0.093643</td>\n      <td>0.093617</td>\n      <td>2373.558624</td>\n      <td>1.186779</td>\n      <td>1.000280</td>\n      <td>1.00</td>\n      <td>1.000280</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <td>0xeF767E740D83d410794519c2F93Db32e44359a5C</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.014658</td>\n      <td>0.000016</td>\n      <td>349.154399</td>\n      <td>0.174577</td>\n      <td>912.596494</td>\n      <td>1.00</td>\n      <td>912.596494</td>\n      <td>10%</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -318,6 +319,7 @@
     "        'recipientGaugeAddr': mainnet_arb_root_gauge_contract.functions.getRecipient().call(),\n",
     "        'symbol': gauge_data['symbol'],\n",
     "        'voteWeight': gauge_data['voteWeight'],\n",
+    "        'voteWeightNoBoost': gauge_data['weightNoBoost'],\n",
     "        'distribution': to_distribute if to_distribute < VOTE_CAPS[gauge_addr] else VOTE_CAPS[gauge_addr],\n",
     "        '%distribution': to_distribute / ARBITRUM_TOTAL * 100,\n",
     "        'boost': combined_boost.get(gauge_addr, 1),\n",
@@ -377,6 +379,7 @@
     "            'recipientGaugeAddr': gauge_info['recipientGauge'],\n",
     "            'symbol': gauge_info['symbol'],\n",
     "            'voteWeight': 0,\n",
+    "            'voteWeightNoBoost': 0,\n",
     "            'distribution': arbitrum_bonus_per_pool,\n",
     "            '%distribution': arbitrum_bonus_per_pool / ARBITRUM_TOTAL * 100,\n",
     "            'boost': combined_boost.get(gauge, 1),\n",
@@ -393,14 +396,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-21T12:57:17.809185Z",
-     "start_time": "2023-09-21T12:57:10.483165Z"
+     "end_time": "2023-09-25T16:39:33.179982Z",
+     "start_time": "2023-09-25T16:39:25.180726Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -431,8 +434,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-21T12:57:21.127850Z",
-     "start_time": "2023-09-21T12:57:20.980539Z"
+     "end_time": "2023-09-25T16:39:33.672605Z",
+     "start_time": "2023-09-25T16:39:33.174755Z"
     }
    }
   },
@@ -447,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Export to csv\n",
@@ -483,8 +486,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-21T12:58:03.061027Z",
-     "start_time": "2023-09-21T12:58:03.050972Z"
+     "end_time": "2023-09-25T16:39:33.775819Z",
+     "start_time": "2023-09-25T16:39:33.679177Z"
     }
    }
   }
