feat: dividing distro by 2 per period in the end

--- a/notebooks/airdrop_arb_distribution/airdrop.ipynb
+++ b/notebooks/airdrop_arb_distribution/airdrop.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "# Export to csv\n",
@@ -434,8 +434,9 @@
     "        tx['contractInputsValues'][\n",
     "            'gaugeAddresses'] = f\"[{','.join([gauge['recipientGaugeAddr'] for gauge in gauge_distributions])}]\"\n",
     "        # Inject vote weights:\n",
+    "        # Dividing by 2 since we are distributing for 2 weeks and 1 week is a period\n",
     "        tx['contractInputsValues'][\n",
-    "            'amountsPerPeriod'] = f\"[{','.join([str(int(gauge['distribution'] * 1e18)) for gauge in gauge_distributions])}]\"\n",
+    "            'amountsPerPeriod'] = f\"[{','.join([str(int(gauge['distribution'] * 1e18 / 2)) for gauge in gauge_distributions])}]\"\n",
     "        tx['contractInputsValues']['maxPeriods'] = f\"[{','.join(['2' for gauge in gauge_distributions])}]\"\n",
     "        break\n",
     "\n",
@@ -446,8 +447,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T14:05:24.073188Z",
-     "start_time": "2023-10-02T14:05:24.068556Z"
+     "end_time": "2023-10-02T14:11:09.184121Z",
+     "start_time": "2023-10-02T14:11:09.138681Z"
     }
    }
   }
