fix: fixing names of output files for arb grant

--- a/notebooks/arb_dao_grant_distribution/dao_grant.ipynb
+++ b/notebooks/arb_dao_grant_distribution/dao_grant.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -99,8 +99,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-05T08:22:38.337857Z",
-     "start_time": "2023-10-05T08:22:30.788877Z"
+     "end_time": "2023-10-05T08:28:09.858618Z",
+     "start_time": "2023-10-05T08:28:02.678744Z"
     }
    }
   },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -139,8 +139,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-05T08:22:38.363336Z",
-     "start_time": "2023-10-05T08:22:38.342255Z"
+     "end_time": "2023-10-05T08:28:09.861439Z",
+     "start_time": "2023-10-05T08:28:09.856474Z"
     }
    }
   },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "from notebooks import fetch_all_pools_info\n",
@@ -214,14 +214,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-05T08:22:40.636912Z",
-     "start_time": "2023-10-05T08:22:38.356798Z"
+     "end_time": "2023-10-05T08:28:12.210310Z",
+     "start_time": "2023-10-05T08:28:09.863272Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# Apply boost data to arb gauges\n",
@@ -251,8 +251,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-05T08:22:49.119460Z",
-     "start_time": "2023-10-05T08:22:40.639471Z"
+     "end_time": "2023-10-05T08:28:21.604372Z",
+     "start_time": "2023-10-05T08:28:12.213408Z"
     }
    }
   },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -399,14 +399,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-05T08:22:57.652178Z",
-     "start_time": "2023-10-05T08:22:49.143287Z"
+     "end_time": "2023-10-05T08:28:29.094578Z",
+     "start_time": "2023-10-05T08:28:20.705848Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
@@ -437,8 +437,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-05T08:22:58.067359Z",
-     "start_time": "2023-10-05T08:22:57.649062Z"
+     "end_time": "2023-10-05T08:28:29.251301Z",
+     "start_time": "2023-10-05T08:28:29.106461Z"
     }
    }
   },
@@ -453,11 +453,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "# Export to csv\n",
-    "arb_gauge_distributions_df.to_csv(f'./output/arb_airdrop_{start_date.date()}_{end_date.date()}.csv',\n",
+    "arb_gauge_distributions_df.to_csv(f'./output/dao_grant_{start_date.date()}_{end_date.date()}.csv',\n",
     "                                  index=False)\n",
     "\n",
     "# Dump into output.json using:\n",
@@ -479,14 +479,14 @@
     "        break\n",
     "\n",
     "# Dump back to arb_distribution_for_msig.json\n",
-    "with open(f'./output/arb_airdrop_{start_date.date()}_{end_date.date()}.json', 'w') as f:\n",
+    "with open(f'./output/dao_grant_{start_date.date()}_{end_date.date()}.json', 'w') as f:\n",
     "    json.dump(output_data, f, indent=4)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-05T08:22:58.074179Z",
-     "start_time": "2023-10-05T08:22:58.069386Z"
+     "end_time": "2023-10-05T08:28:55.046082Z",
+     "start_time": "2023-10-05T08:28:55.021005Z"
     }
    }
   }
